bug removido no card01

--- a/style.css
+++ b/style.css
@@ -951,7 +951,7 @@ textarea {
 /* .report-filters{
     display: flex;
     flex-direction: column;
-} */ */
+} */ 
 .card01 {
     background: #4379F2;
 
